# AutoRia_clone_project

./: .env  .gitignore  Dockerfile  README.txt  docker-compose.yml  nginx.conf  pyproject.toml
backend/: manage.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/chat/: consumers.py  routes.py
backend/apps/create_car_ad/: apps.py  choices.py  models.py  regex.py  serializers.py  services.py  urls.py  views.py
backend/apps/create_car_application/: apps.py  choices.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/: managers.py  models.py  regex.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  routes.py  settings.py  urls.py
backend/configs/extra_conf/: rest_conf.py
backend/core_app/: pagination.py
backend/core_app/dataclasses/: user_dataclass.py
backend/core_app/enums/: action_token_enum.py
backend/core_app/handlers/: error_handler.py
backend/core_app/permissions/: is_car_dealership_permission.py  is_premium_user_permission.py  is_superuser_permission.py
backend/core_app/services/: email_service.py  jwt_service.py
backend/templates/: activate_user.html  obscene_language.html  recovery_password.html
client/: asset-manifest.json  index.html
client/static/js/: main.f34a276b.js  main.f34a276b.js.map
frontend/: package-lock.json  package.json
frontend/src/: router.js
frontend/src/components/: HeaderComponent.js
frontend/src/constants/: urls.js
frontend/src/layouts/: MainLayout.js
frontend/src/pages/: AuthPage.js  CarPage.js  UserPage.js
frontend/src/services/: apiService.js  (+3 more)
(+11 files in other folders)
