[tool.poetry]
name = "python-project"
version = "0.1.0"
description = ""
authors = ["UASTRONGMAN <shkolniy.maks@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
mysqlclient = "^2.2.6"
djangorestframework-simplejwt = "^5.3.1"
pillow = "11.0.0"
celery = "^5.4.0"
redis = "^5.2.0"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.7.0"
better-profanity = "^0.7.0"
django-hitcount = "^1.3.5"
requests = "^2.32.3"



[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
django-dotenv = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
